desktop done (maximize bug, no recize, no windows out of the screen)

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -21,4 +21,7 @@ body {
     left: 50%;
     transform: translateX(-50%);
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
