--- a/src/window/window.css
+++ b/src/window/window.css
@@ -8,5 +8,5 @@
     width: 800px;
     height: 600px;
     left: 50%;
-    top: 10%;
+    top: 25%;
 }
